Complete checkstyle stuff